--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prettier": "2.8.4"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "faker": "^5.5.3"
+    "express": "4.18.2",
+    "faker": "5.5.3"
   }
 }
