Fix vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/",
-      "destination": ["/public"]
+      "destination": "/public"
     },
     {
       "source": "/api/(.*)",
