--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "source": "/api/(.*)",
       "destination": "/api"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/public/$1"
     }
   ],
 
@@ -14,13 +18,6 @@
     {
       "src": "/api/index.js",
       "use": "@now/node"
-    }
-  ],
-
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
     }
   ]
 }
