--- a/vercel.json
+++ b/vercel.json
@@ -14,18 +14,10 @@
     {
       "src": "/api/index.js",
       "use": "@now/node"
-    },
-    {
-      "src": "*.css",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "*.svg",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "*.html",
-      "use": "@vercel/static"
     }
-  ]
+  ],
+
+  "static": {
+    "directory": "public"
+  }
 }
