--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,22 @@
 {
-  "rewrites": [
-    {
-      "source": "/",
-      "destination": "/api"
-    },
-    {
-      "source": "/api/(.*)",
-      "destination": "/api"
-    }
-  ],
-
   "builds": [
     {
       "src": "/api/index.js",
       "use": "@now/node"
     }
   ],
-
-  "static": {
-    "directory": "public"
-  }
+  "routes": [
+    {
+      "src": "/public/(.*)",
+      "dest": "/public/$1"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/public/favicon.ico"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
