--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
     {
       "source": "/api/(.*)",
       "destination": "/api"
-    }
+    },
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
 
   "builds": [
