--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,8 @@
       "source": "/api/(.*)",
       "destination": "/api"
     },
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/(.*)", "destination": "/index.html" },
+    { "source": "/(.*)", "destination": "/*.css" }
   ],
 
   "builds": [
