--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,14 @@
     {
       "src": "/api/index.js",
       "use": "@now/node"
+    },
+    {
+      "src": "/public/index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "/public/(.*)",
+      "use": "@vercel/static"
     }
   ]
 }
