--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,9 @@
       "source": "/api/(.*)",
       "destination": "/api"
     }
+  ],
+
+  "builds": [
+    { "src": "/api/index.js", "use": "@now/node" }
   ]
 }
