--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,6 @@
   ],
 
   "builds": [
-    { "src": "/api/index.js", "use": "@now/node" }
+    { "src": "/api/index.js", "use": "@vercel/node" }
   ]
 }
